--- a/src/main/resources/static/readme.html
+++ b/src/main/resources/static/readme.html
@@ -13,9 +13,9 @@
 	<div class="detail">用以获取襄阳《今日播报》视频节目资源信息</div>
 	<div class="usage">功能</div>
 	<dl>
-		<dt>1. <span>/jrbb/{<div class="wrapper">yyyyMMdd</div>}</span></dt>
+		<dt>1. <span>/jrbbws/{<div class="wrapper">yyyyMMdd</div>}</span></dt>
 		<dd>尝试获取指定日期《今日播报》视频的信息</dd>
-		<dt>2. <a href="/jrbb/latest" target="_self"><span>/jrbb/latest</span></a></dt>
+		<dt>2. <a href="/jrbb/latest" target="_self"><span>/jrbbws/latest</span></a></dt>
 		<dd>尝试获取最新《今日播报》视频的信息</dd>
 	</dl>
 </div>
