说明页超链接上次忘记修改

--- a/src/main/resources/static/readme.html
+++ b/src/main/resources/static/readme.html
@@ -15,7 +15,7 @@
 	<dl>
 		<dt>1. <span>/jrbbws/{<div class="wrapper">yyyyMMdd</div>}</span></dt>
 		<dd>尝试获取指定日期《今日播报》视频的信息</dd>
-		<dt>2. <a href="/jrbb/latest" target="_self"><span>/jrbbws/latest</span></a></dt>
+		<dt>2. <a href="/jrbbws/latest" target="_self"><span>/jrbbws/latest</span></a></dt>
 		<dd>尝试获取最新《今日播报》视频的信息</dd>
 	</dl>
 </div>
